Fix UI scrollbar, change variable global to state

--- a/src/pages/Directory/TableFilter/index.less
+++ b/src/pages/Directory/TableFilter/index.less
@@ -13,7 +13,13 @@
     }
   }
 
-  .customScrollbar();
+  ::-webkit-scrollbar {
+    width: 0px;
+    background: transparent; /* make scrollbar transparent */
+  }
+
+  scrollbar-width: none; /* Firefox */
+  -ms-overflow-style: none;
 
   .openSider {
     position: relative;
